src/components/action-bar/action-bar.scss
/**
* @prop --action-bar-item-text-color: Text color of action bar items, defaults to `--contrast-1100`.
* @prop --action-bar-item-icon-color: Color of the icons displayed on each action bar item. Defaults to the text color. To specify a color for an individual item, use the `iconColor` prop instead.
* @prop --action-bar-item-max-width: Maximum width of a button in the action bar. Defaults to `10rem`. Keep in mind that the buttons should not appear too big.
* @prop --action-bar-border-radius: Defines the roundness of the corners of the action bar. Defaults to `0`.
* @prop --action-bar-background-color: Background color of the whole component. Defaults to `--contrast-100`.
* @prop --action-bar-shrink-icon-color: Color of the shrink icon. Defaults to `--contrast-1000`.

*/

@use '../../style/mixins';

:host(limel-action-bar) {
    --action-bar-item-height: 2rem;

    --limel-action-bar-item-text-color: var(
        --action-bar-item-text-color,
        rgb(var(--contrast-1100))
    );

    box-sizing: border-box;

    display: inline-flex;
    align-items: center;
    padding: 0.125rem 0.25rem;
    max-width: 100%;
    border-radius: var(--action-bar-border-radius);

    background-color: var(
        --action-bar-background-color,
        rgb(var(--contrast-100))
    );

    transition: max-width 0.3s ease;
}

:host(limel-action-bar),
.items {
    gap: 0.25rem;
    @media (pointer: coarse) {
        gap: 0.5rem;
    }
}

.items {
    display: inline-flex;
    max-width: 100%;
    min-width: 0;
}

:host(limel-action-bar.is-shrunk) .items {
    opacity: 0;
}

:host(limel-action-bar:not(.is-shrunk)) .items {
    opacity: 1;
}

:host(limel-action-bar.is-full-width) {
    width: 100%;
}

:host(limel-action-bar.is-floating) {
    --action-bar-border-radius: 100vw;
    border: 1px solid rgb(var(--contrast-400));

    padding-right: 0.125rem;
    padding-left: 0.125rem;

    max-width: calc(100% - 2rem);
    box-shadow: var(--shadow-depth-16), var(--shadow-depth-8);
}

:host(limel-action-bar.is-shrunk) {
    max-width: 5rem;
    transition: max-width 0.3s ease-in-out;

    .expand-shrink {
        transition: transform 0.3s ease;
        transform: rotateY(180deg);
    }
}

:host(limel-action-bar:not(.is-shrunk)) {
    max-width: 100%;
    transition: max-width 0.3s ease-in-out;

    .expand-shrink {
        transition: transform 0.3s ease;
        transform: rotateY(0deg);
    }
}

:host(limel-action-bar.can-be-shrunk.is-full-width) {
    .expand-shrink {
        margin-left: auto;
    }
}

button.expand-shrink {
    @include mixins.reset-button-user-agent-styles;
    box-sizing: border-box;
    border-radius: 50%;

    @include mixins.is-flat-clickable();
    @include mixins.visualize-keyboard-focus;

    display: flex;
    justify-content: center;
    align-items: center;

    limel-icon {
        width: 1.5rem;
        height: 1.5rem;
        padding: 0.125rem;
        color: var(--action-bar-shrink-icon-color, rgb(var(--contrast-1000)));
    }
}

